--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WhatsApp Bot created By Mr Shaban",
   "main": "index.js",
   "scripts": {
-    "start": "pm2-runtime start index.js --name SHABAN-MD",
+    "start": "NO_AT_BRIDGE=1 pm2 start index.js --deep-monitoring --attach --name SHABAN-MD",
     "stop": "pm2 stop SHABAN-MD",
     "restart": "pm2 restart SHABAN-MD"
   },
